@@ -35,6 +35,7 @@
 25. When copying tracks to a device, only update cache if configured to do so.
 26. Fix MusicBrainz disc ID calculation.
 27. When loading URLs via commandline use AppendAndPlay.
+28. MPRIS seeks command specifies an offset from current position.
 
 2.3.2
 -----
